--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
-= Showcase for Mux based on Go
+= Showcase for microservices on Golang
 
-This project holds a showcase for Mux related things.
+This project holds a showcase for Golang related things.
