--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,17 @@
 = Showcase for microservices on Golang
 
 This project holds a showcase for Golang related things.
+
+== todo-service-gin
+
+Small implementation based on Gin, 3-Layer and DI
+
+== todo-service-mux
+
+Old test with Mux
+
+== Links
+
+- https://github.com/gorilla/mux
+- https://github.com/gin-gonic/gin
+- https://github.com/swaggo/gin-swagger
