--- a/README.adoc
+++ b/README.adoc
@@ -23,3 +23,11 @@ Old test with Mux
 - https://github.com/IBM/sarama
 - https://github.com/bracesdev/errtrace
 - https://go.dev/blog/deadcode
+- https://github.com/appliedgocode/what
+
+== Tracing
+- https://uptrace.dev/get/instrument/opentelemetry-gin.html#gin-instrumentation
+- https://uptrace.dev/get/instrument/opentelemetry-gorm.html#usage
+- https://zipkin.io/
+- https://www.jaegertracing.io/
+
