--- a/README.adoc
+++ b/README.adoc
@@ -43,7 +43,6 @@ This project holds a showcase for Golang related things.
 - https://go.dev/blog/deadcode
 - https://github.com/appliedgocode/what
 - https://gorm.io/index.html
-- https://github.com/Thiht/transactor
 
 == Tracing
 
@@ -65,3 +64,8 @@ This project holds a showcase for Golang related things.
 
 - https://github.com/lucaspickering/slumber
 - https://hurl.dev/
+
+== Transactions
+
+- https://blog.thibaut-rousseau.com/blog/sql-transactions-in-go-the-good-way/
+- https://github.com/Thiht/transactor
